--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.3.1",
     "@tanstack/react-query": "^5.81.2",
     "@vercel/blob": "^1.1.1",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "highlight.js": "^11.11.1",
     "html-to-text": "^9.0.5",
     "lucide-react": "^0.517.0",
@@ -48,6 +50,7 @@
     "react-hook-form": "^7.58.1",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
+    "resend": "^4.6.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tiptap-markdown": "^0.8.10",
@@ -61,7 +64,6 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/bcrypt": "^5.0.2",
     "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
