--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@ai-sdk/mistral": "^1.2.8",
     "@ai-sdk/react": "^1.2.12",
+    "@arcjet/inspect": "^1.0.0-beta.9",
+    "@arcjet/next": "^1.0.0-beta.9",
     "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.11.1",
